add ex 2