@@ -1,17 +1,13 @@
 package com.allendowney.thinkdast;
 
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Iterator;
-import java.util.List;
-import java.util.ListIterator;
+import java.util.*;
 
 /**
- * @author downey
  * @param <T>
- *
+ * @author downey
  */
-public class MyArrayList<T> implements List<T> {
+public class MyArrayList<T> implements List<T>
+{
 	int size;                    // keeps track of the number of elements
 	private T[] array;           // stores the elements
 
@@ -19,7 +15,8 @@ public class MyArrayList<T> implements List<T> {
 	 *
 	 */
 	@SuppressWarnings("unchecked")
-	public MyArrayList() {
+	public MyArrayList()
+	{
 		// You can't instantiate an array of T[], but you can instantiate an
 		// array of Object and then typecast it.  Details at
 		// http://www.ibm.com/developerworks/java/library/j-jtp01255/index.html
@@ -30,7 +27,8 @@ public class MyArrayList<T> implements List<T> {
 	/**
 	 * @param args
 	 */
-	public static void main(String[] args) {
+	public static void main(String[] args)
+	{
 		// run a few simple tests
 		MyArrayList<Integer> mal = new MyArrayList<Integer>();
 		mal.add(1);
@@ -38,62 +36,82 @@ public class MyArrayList<T> implements List<T> {
 		mal.add(3);
 		System.out.println(Arrays.toString(mal.toArray()) + " size = " + mal.size);
 
-		mal.remove(new Integer(2));
+		mal.remove(Integer.valueOf(2));
 		System.out.println(Arrays.toString(mal.toArray()) + " size = " + mal.size);
 	}
 
 	@Override
-	public boolean add(T element) {
-		// TODO: FILL THIS IN!
-		return false;
+	public boolean add(T element)
+	{
+		if (size >= array.length)
+		{
+			T[] bigger = (T[]) new Object[array.length * 2];
+			System.arraycopy(array, 0, bigger, 0, array.length);
+			array = bigger;
+		}
+
+		array[size] = element;
+		size++;
+		return true;
 	}
 
 	@Override
-	public void add(int index, T element) {
-		if (index < 0 || index > size) {
+	public void add(int index, T element)
+	{
+		if (index < 0 || index > size)
+		{
 			throw new IndexOutOfBoundsException();
 		}
 		// add the element to get the resizing
 		add(element);
 
 		// shift the elements
-		for (int i=size-1; i>index; i--) {
-			array[i] = array[i-1];
+		for (int i = size - 1; i > index; i--)
+		{
+			array[i] = array[i - 1];
 		}
 		// put the new one in the right place
 		array[index] = element;
 	}
 
 	@Override
-	public boolean addAll(Collection<? extends T> collection) {
+	public boolean addAll(Collection<? extends T> collection)
+	{
 		boolean flag = true;
-		for (T element: collection) {
+		for (T element : collection)
+		{
 			flag &= add(element);
 		}
 		return flag;
 	}
 
 	@Override
-	public boolean addAll(int index, Collection<? extends T> collection) {
+	public boolean addAll(int index, Collection<? extends T> collection)
+	{
 		throw new UnsupportedOperationException();
 	}
 
 	@Override
-	public void clear() {
+	public void clear()
+	{
 		// note: this version does not actually null out the references
 		// in the array, so it might delay garbage collection.
 		size = 0;
 	}
 
 	@Override
-	public boolean contains(Object obj) {
+	public boolean contains(Object obj)
+	{
 		return indexOf(obj) != -1;
 	}
 
 	@Override
-	public boolean containsAll(Collection<?> collection) {
-		for (Object element: collection) {
-			if (!contains(element)) {
+	public boolean containsAll(Collection<?> collection)
+	{
+		for (Object element : collection)
+		{
+			if (!contains(element))
+			{
 				return false;
 			}
 		}
@@ -101,41 +119,62 @@ public class MyArrayList<T> implements List<T> {
 	}
 
 	@Override
-	public T get(int index) {
-		if (index < 0 || index >= size) {
+	public T get(int index)
+	{
+		if (index < 0 || index >= size)
+		{
 			throw new IndexOutOfBoundsException();
 		}
 		return array[index];
 	}
 
-	@Override
-	public int indexOf(Object target) {
-		// TODO: FILL THIS IN!
-		return -1;
-	}
+//	@Override
+//	public int indexOf(Object target)
+//	{
+//		for (int i = 0; i < this.size; i++)
+//		{
+//				if (equals(target, array[i]))
+//				{
+//					return i;
+//				}
+//			}
+//
+//			return -1;
+//		}
+//	}
 
-	/** Checks whether an element of the array is the target.
-	 *
+	/** returns the index of the first occurence of the element in the list
+	 . it will return -1 if the list does not contain the element
+	 **/
+
+	/**
+	 * Checks whether an element of the array is the target.
+	 * <p>
 	 * Handles the special case that the target is null.
 	 *
 	 * @param target
 	 * @param object
 	 */
-	private boolean equals(Object target, Object element) {
-		if (target == null) {
+	private boolean equals(Object target, Object element)
+	{
+		if (target == null)
+		{
 			return element == null;
-		} else {
+		} else
+		{
 			return target.equals(element);
 		}
 	}
 
 	@Override
-	public boolean isEmpty() {
+	public boolean isEmpty()
+	{
 		return size == 0;
 	}
 
 	@Override
-	public Iterator<T> iterator() {
+	public Iterator<T> iterator()
+	{
 		// make a copy of the array
 		T[] copy = Arrays.copyOf(array, size);
 		// make a list and return an iterator
@@ -143,10 +182,13 @@ public class MyArrayList<T> implements List<T> {
 	}
 
 	@Override
-	public int lastIndexOf(Object target) {
+	public int lastIndexOf(Object target)
+	{
 		// see notes on indexOf
-		for (int i = size-1; i>=0; i--) {
-			if (equals(target, array[i])) {
+		for (int i = size - 1; i >= 0; i--)
+		{
+			if (equals(target, array[i]))
+			{
 				return i;
 			}
 		}
@@ -154,7 +196,8 @@ public class MyArrayList<T> implements List<T> {
 	}
 
 	@Override
-	public ListIterator<T> listIterator() {
+	public ListIterator<T> listIterator()
+	{
 		// make a copy of the array
 		T[] copy = Arrays.copyOf(array, size);
 		// make a list and return an iterator
@@ -162,7 +205,8 @@ public class MyArrayList<T> implements List<T> {
 	}
 
 	@Override
-	public ListIterator<T> listIterator(int index) {
+	public ListIterator<T> listIterator(int index)
+	{
 		// make a copy of the array
 		T[] copy = Arrays.copyOf(array, size);
 		// make a list and return an iterator
@@ -170,9 +214,11 @@ public class MyArrayList<T> implements List<T> {
 	}
 
 	@Override
-	public boolean remove(Object obj) {
+	public boolean remove(Object obj)
+	{
 		int index = indexOf(obj);
-		if (index == -1) {
+		if (index == -1)
+		{
 			return false;
 		}
 		remove(index);
@@ -180,39 +226,60 @@ public class MyArrayList<T> implements List<T> {
 	}
 
 	@Override
-	public T remove(int index) {
-		// TODO: FILL THIS IN!
-		return null;
+	public T remove(int index)
+	{	T element = get(index);
+		if (index > this.array.length || index < 0  )
+		{
+			throw new IndexOutOfBoundsException();
+		}
+		for (int i = 0; i < this.array.length; i++)
+		{
+			array[i] = array[i+1];
+		}
+		size--;
+		return element
 	}
 
+	/**
+	 * removes the elemet of a specifc position
+	 **/
+
 	@Override
-	public boolean removeAll(Collection<?> collection) {
+	public boolean removeAll(Collection<?> collection)
+	{
 		boolean flag = true;
-		for (Object obj: collection) {
+		for (Object obj : collection)
+		{
 			flag &= remove(obj);
 		}
 		return flag;
 	}
 
 	@Override
-	public boolean retainAll(Collection<?> collection) {
+	public boolean retainAll(Collection<?> collection)
+	{
 		throw new UnsupportedOperationException();
 	}
 
 	@Override
-	public T set(int index, T element) {
-		// TODO: FILL THIS IN!
-		return null;
+	public T set(int index, T element)
+	{
+		T old = get(index);
+		array[index] = element;
+		return old;
 	}
 
 	@Override
-	public int size() {
+	public int size()
+	{
 		return size;
 	}
 
 	@Override
-	public List<T> subList(int fromIndex, int toIndex) {
-		if (fromIndex < 0 || toIndex >= size || fromIndex > toIndex) {
+	public List<T> subList(int fromIndex, int toIndex)
+	{
+		if (fromIndex < 0 || toIndex >= size || fromIndex > toIndex)
+		{
 			throw new IndexOutOfBoundsException();
 		}
 		T[] copy = Arrays.copyOfRange(array, fromIndex, toIndex);
@@ -220,12 +287,14 @@ public class MyArrayList<T> implements List<T> {
 	}
 
 	@Override
-	public Object[] toArray() {
+	public Object[] toArray()
+	{
 		return Arrays.copyOf(array, size);
 	}
 
 	@Override
-	public <U> U[] toArray(U[] array) {
+	public <U> U[] toArray(U[] array)
+	{
 		throw new UnsupportedOperationException();
 	}
 }
